--- a/src/html/views/admin/statistics/statistics.html
+++ b/src/html/views/admin/statistics/statistics.html
@@ -8,7 +8,7 @@
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
         <style>
-        #myChart {
+        .myCharts {
             border: solid 1px black;
             width: 100%;
         }
@@ -24,16 +24,38 @@
         <main>
             <div class="container mt-5" id="statisticsTab">
                 <h1 class="h1 text-center">Number Of Offers Created Per Day</h1>
-                <div class="container-canvas tab-content mt-5" id="statisticsTab">
-                    <canvas id="myChart"></canvas>
+                <div class="container-canvas tab-content mt-5" id="numberOfferTab">
+                    <canvas style="myCharts" id="offersChart"></canvas>
                 </div>
-                <input class="mt-3" type="month" id="monthInput" onchange="filterChart(this)">
+                <input class="mt-3" type="month" id="monthInput" onchange="filterMonthChart(this)">
+                <h1 class="h1 text-center mt-5">Mean Discount For (Sub)Category Per Day</h1>
+                <p id="defaultCategoryText" class="p text-center">Default: Subcategory Οδοντόβουρτσες</p>
+                <div id="liveAlertPlaceholder" class="mt-5"></div>
+                <div class="container-canvas tab-content mt-5" id="statisticsTab">
+                    <canvas style="myCharts" id="discountChart"></canvas>
+                </div>
+                <input class="mt-3" type="week" id="weekInput" onchange="filterWeekChart(this)">
+                <div class="btn-group" id="categories-div" hidden="true">
+                    <button id="categoriesButton" type="button me-3" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Categories
+                    </button>
+                    <div class="dropdown-menu" id="categories-dropdown">
+                    </div>
+                </div>
+                <div class="btn-group" id="subcategories-div" hidden="true">
+                    <button id="subcategoriesButton" type="button me-3" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Subcategories
+                    </button>
+                    <div class="dropdown-menu" id="subcategories-dropdown">
+                    </div>
+                </div>
             </div>
         </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.3/dist/chart.umd.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="../views/admin/statistics/statistics.js"></script>
     </body>
