--- a/src/html/views/usernavbar.html
+++ b/src/html/views/usernavbar.html
@@ -15,7 +15,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a id="deals-nav" class="nav-link" aria-current="page" href="/map">Deals Map</a>
+                            <a id="map-nav" class="nav-link" aria-current="page" href="/map">Deals Map</a>
                         </li>
                         <li class="nav-item">
                             <a id="submit-nav" class="nav-link" aria-current="page" href="/submit">Submit Deal</a>
